se modificaron y renombraron modelos que tenian guiones bajos OfertaLaboral, statusofertalaboral, postulacionofertalaboral
